kubernetes/website-portifolio/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: webport-pod
  name: webport-pod
  namespace: website-portifolio
spec:
  containers:
  
    - image: yohrannes/website-portifolio:latest
      name: webport
      ports:
        - containerPort: 5000
          protocol: TCP
      resources:
        limits:
          cpu: "300m"
          memory: "512Mi"

  restartPolicy: OnFailure
