kubernetes/website-portifolio/gateway-rule.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webport-route
  namespace: website-portifolio
spec:
  parentRefs:
    - name: gateway
      namespace: nginx-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: webport-svc
          port: 80
